src/objects/API_Log__c.object
<CustomObject>
    <fields>
        <fullName>Api_Method__c</fullName>
        <label>Api Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endpiont__c</fullName>
        <label>Endpiont</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>API Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Endpiont__c</columns>
        <columns>Create_Date__c</columns>
        <columns>Request_Body__c</columns>
        <columns>Response_Body__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Api_Method__c</columns>
        <columns>Object_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>API Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>